--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ thiserror = "2.0.11"
 ed25519-dalek = { version = "2.1.1", optional = true }
 hmac = { version = "0.12.1", optional = true }
 sha2 = { version = "0.10.8", optional = true }
+rsa = { version = "0.9.7", optional = true }
+pkcs1 = "0.7.5"
 
 [features]
 default = ["hs256"]
 hs256 = ["dep:hmac", "dep:sha2"]
+rs256 = ["dep:rsa", "dep:sha2"]
 ed25519 = ["ed25519-dalek"]
