--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde_json = "1.0.139"
 thiserror = "2.0.11"
 ed25519-dalek = { version = "2.1.1", optional = true }
 hmac = { version = "0.12.1", optional = true }
-sha2 = { version = "0.10.8", optional = true }
+sha2 = { version = "0.10.8", features = ["oid"], optional = true }
 rsa = { version = "0.9.7", optional = true }
 pkcs1 = "0.7.5"
 
