--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,14 @@ base64 = "0.22.1"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
 thiserror = "2.0.11"
-ed25519-dalek = { version = "2.1.1", optional = true }
 hmac = { version = "0.12.1", optional = true }
 sha2 = { version = "0.10.8", features = ["oid"], optional = true }
 rsa = { version = "0.9.7", optional = true }
+p256 = { version = "0.13.2", optional = true }
 pkcs1 = "0.7.5"
 
 [features]
 default = ["hs256"]
 hs256 = ["dep:hmac", "dep:sha2"]
 rs256 = ["dep:rsa", "dep:sha2"]
-ed25519 = ["ed25519-dalek"]
+es256 = ["dep:p256"]
