--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ sha2 = { version = "0.10.8", features = ["oid"], optional = true }
 rsa = { version = "0.9.7", optional = true }
 p256 = { version = "0.13.2", optional = true }
 pkcs1 = "0.7.5"
+p256 = { version = "0.13.2", features = ["pem"], optional = true }
 
 [features]
 default = ["hs256"]
 hs256 = ["dep:hmac", "dep:sha2"]
 rs256 = ["dep:rsa", "dep:sha2"]
 es256 = ["dep:p256"]
+#ed25519 = ["ed25519-dalek"]
